# transylvania

./: .gitignore  LICENSE  README.md  pyproject.toml
transylvania/: __init__.py  cli.py  pdf.py  setup.py  translator.py
