[project]
name = "transylvania"
version = "0.1.0"
description = "Korean to English translation using Argos Translate"
requires-python = ">=3.12"
dependencies = [
    "argostranslate>=1.9.6",
]

[project.scripts]
translate = "transylvania.cli:main"
download-languages = "transylvania.setup:download_korean_english"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
